# robotics

./: .gitignore  README.md  hw4-5.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/irobot_create_control/share/irobot_create_control/: package.sh
install/turtlesim/lib/turtlesim/: mimic  (+2 more)
install/udbot_viz/share/udbot_viz/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/udbot_viz/share/udbot_viz/cmake/: udbot_vizConfig.cmake
install/udbot_viz/share/udbot_viz/launch/: view_model.launch.py
log/: latest_build
src/qbert_py_laserfollow/: setup.cfg  setup.py
src/qbert_py_laserfollow/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/qbert_py_laserfollow/log/: latest_build
src/qbert_py_laserfollow/qbert_py_laserfollow/: laserfollow.py  qbert_py_laswerfollow.py
src/qbert_py_minesweeper/: notes.md  setup.cfg  setup.py
src/qbert_py_minesweeper/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
src/qbert_py_minesweeper/log/: latest_build
src/qbert_py_minesweeper/qbert_py_minesweeper/: ball_tracker.py  minesweeper.py
src/qbert_py_movement/: package.xml  setup.cfg  setup.py
src/qbert_py_movement/install/: local_setup.sh  setup.bash  setup.sh
src/qbert_py_movement/log/: latest_build
src/qbert_py_movement/qbert_py_movement/: hw2.md  reactor.py  wanderer.py
src/qbert_py_soccer/: notes.md  setup.cfg  setup.py
src/qbert_py_soccer/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/qbert_py_soccer/qbert_py_soccer/: rocketleague.py
(+78 files in other folders)
