<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udbot_viz</name>
  <version>0.0.1</version>
  <description>Visualization launchers and helpers for UDBot</description>
  <maintainer email="cer@cis.udel.edu">Prof. Christopher Rasmussen</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rviz2</depend>
  <depend>rqt_robot_monitor</depend>
  <depend>udbot_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
